Fix incorrect alignment of translation column of RTL languages
svn path=/src/trunk/Pootle/; revision=10490

--- a/html/style.css
+++ b/html/style.css
@@ -1038,10 +1038,9 @@ table[dir="rtl"] td.translate-original
 
 .translation-text
 {
-    display: inline;
     max-width: 100%;
     overflow: auto;
-    padding: 10px;
+    padding: 0 10px 0 10px;
 }
 
 .translation-text-headers
